Fixed white space on right site of page

--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 /* Navigation */
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 
 .sidenav {
     background: rgb(74, 53, 167);
@@ -120,7 +128,7 @@ a:link {
     padding-right: 25px;
     padding-left: 0px;
     padding-bottom: 10px;
-    width: 100%;
+    width: 90%;
 }
 
 .projects-date {
